# CBA

./: .env.example  .gitignore  =3.0  AGENTS.md  CLAUDE.md  LICENSE  README.md  Structure.md  pyproject.toml
assets/: cba_diagram.mmd
brain_agent/: __init__.py  __main__.py  agent.py  pipeline.py
brain_agent/channels/: base.py  discord_adapter.py  manager.py  telegram_adapter.py
brain_agent/cli/: __init__.py  commands.py
brain_agent/config/: schema.py
brain_agent/core/: activation_profile.py  embeddings.py  network_modes.py  neuromodulator_controller.py  neuromodulators.py  predictor.py  router.py  session.py  signals.py  temporal.py  workspace.py
brain_agent/dashboard/: emitter.py  providers_inventory.py  server.py
brain_agent/extraction/: __init__.py  _mock_llm.py  config.py  extractor.py  orchestrator.py  refiner.py  severity.py  temporal_resolver.py  triage.py  types.py  validator.py
brain_agent/mcp/: __init__.py  client.py  knowledge_server.py  proxy.py  registry.py  transport.py
brain_agent/memory/: brain_state.py  consolidation.py  contradictions_store.py  dreaming.py  embedding_cache.py  episodic_store.py  forgetting.py  graph_analysis.py  hippocampal_staging.py  manager.py  narrative_consolidation.py  ontology_seed.py  ontology_store.py  open_questions_store.py  personal_adapter.py  (+9 more)
dashboard/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docs/: knowledge_layer_plan.md
tests/: conftest.py  test_2call_architecture.py  test_agent.py  test_cli.py  test_integration.py  test_pipeline.py  test_pipeline_multimodal.py
(+272 files in other folders)
