[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-agent"
version = "0.1.0"
description = "Neuroscience-faithful AI agent framework with brain cognitive architecture"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "mcp>=1.0.0",
    "networkx>=3.0",
    "langsmith>=0.1.0",
]

[project.scripts]
brain-agent = "brain_agent.cli.commands:main"

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3"]
channels = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
